--- a/WebContent/homepage/123.css
+++ b/WebContent/homepage/123.css
@@ -26,7 +26,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p,
 	vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure, footer, header, hgroup, ,
+article, aside, details, figcaption, figure, footer, header, hgroup,
 	nav, section {
 	display: block;
 }
